@@ -636,7 +636,7 @@ public:
    /**
     * Sets the IO stats strategy to use.
     */
-   void setIOStatStrategy(vpr::BaseIOStatsStrategy* strat)
+   void setIOStatStrategy(vpr::BaseIOStatsStrategy<>* strat)
    {
       mStatsStrategy = strat;
       if(mStatsStrategy != NULL)              // If we have a non-NULL strategy
@@ -646,7 +646,7 @@ public:
    /**
     * Gets the current IO stats strategy.
     */
-   vpr::BaseIOStatsStrategy* getIOStatStrategy()
+   vpr::BaseIOStatsStrategy<>* getIOStatStrategy()
    { return mStatsStrategy; }
 
 protected:
@@ -871,7 +871,7 @@ protected:
    bool m_blocking;
 
    /// Perf monitor
-   vpr::BaseIOStatsStrategy*   mStatsStrategy;
+   vpr::BaseIOStatsStrategy<>*   mStatsStrategy;
 };
 
 }; // End of vpr namespace
